<resources>
    <string name="app_name">WoW ToDo</string>
    <string name="label_criar_tarefa">Criar Tarefa</string>
    <string name="label_tarefas">Tarefas</string>
    <string name="label_title">Titulo</string>
    <string name="label_description">Descrição</string>
    <string name="label_hora">Hora</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_empty">Ops, Você não tem\nnenhum tarefa.\nCrie algumas!!</string>
</resources>